Updated poms and FgpUtil tests to junit5

--- a/Test/pom.xml
+++ b/Test/pom.xml
@@ -1,13 +1,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  
+
   <parent>
     <groupId>org.eupathdb</groupId>
     <artifactId>api-common-website</artifactId>
     <version>1.0.0</version>
   </parent>
-  
+
   <name>Api Common Website - Test</name>
   <artifactId>api-common-website-test</artifactId>
   <packaging>jar</packaging>
@@ -28,17 +28,18 @@
       <groupId>org.eupathdb</groupId>
       <artifactId>ebrc-website-common-model</artifactId>
     </dependency>
-    
+
     <dependency>
       <groupId>org.eupathdb</groupId>
       <artifactId>api-common-website-model</artifactId>
     </dependency>
-    
+
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter</artifactId>
+      <scope>test</scope>
     </dependency>
-    
+
   </dependencies>
 
 </project>
