--- a/Service/pom.xml
+++ b/Service/pom.xml
@@ -17,11 +17,6 @@
 
     <dependency>
       <groupId>org.gusdb</groupId>
-      <artifactId>fgputil-util</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>org.gusdb</groupId>
       <artifactId>fgputil-server</artifactId>
     </dependency>
 
@@ -78,8 +73,12 @@
     </dependency>
 
     <dependency>
-      <groupId>log4j</groupId>
-      <artifactId>log4j</artifactId>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-core</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-1.2-api</artifactId>
     </dependency>
 
     <dependency>
