--- a/Model/pom.xml
+++ b/Model/pom.xml
@@ -16,6 +16,11 @@
 
     <dependency>
       <groupId>org.gusdb</groupId>
+      <artifactId>fgputil-core</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.gusdb</groupId>
       <artifactId>fgputil-xml</artifactId>
     </dependency>
 
