--- a/Service/pom.xml
+++ b/Service/pom.xml
@@ -17,6 +17,11 @@
 
     <dependency>
       <groupId>org.gusdb</groupId>
+      <artifactId>fgputil-core</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.gusdb</groupId>
       <artifactId>fgputil-server</artifactId>
     </dependency>
 
