--- a/Site/webapp/WEB-INF/web.xml
+++ b/Site/webapp/WEB-INF/web.xml
@@ -51,6 +51,15 @@
   </filter-mapping>
 
   <filter>
+    <filter-name>AssetBundlerFilter</filter-name>
+    <filter-class>org.eupathdb.common.controller.AssetBundleFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>AssetBundlerFilter</filter-name>
+    <url-pattern>/bundles/*</url-pattern>
+  </filter-mapping>
+
+  <filter>
     <filter-name>BetaLegacyFilter</filter-name>
     <filter-class>org.eupathdb.common.controller.BetaLegacyFilter</filter-class>
     <init-param>
