--- a/Site/package.json
+++ b/Site/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@types/cytoscape": "3.2.9",
     "ciena-dagre": "^1.0.0",
     "cytoscape": "^3.2.9",
     "cytoscape-dagre": "^1.3.0",
