add container_env conifer templates This is to facilitate setting environment vars for containers that pair with websites (such as SiteSearchData)

--- a/Model/lib/conifer/roles/conifer/vars/ApiCommon/templates.yml
+++ b/Model/lib/conifer/roles/conifer/vars/ApiCommon/templates.yml
@@ -11,6 +11,9 @@ model.prop:
 comment-config.xml:
   src: 'ApiCommonWebsite/comment-config.xml.j2'
   dest: '{{ gus_home }}/config/{{ project }}/comment-config.xml'
+container_env:
+  src: 'ApiCommonWebsite/container_env.j2'
+  dest: '{{ gus_home }}/config/{{ project }}/container_env'
 profileSimilarity-config:
   src: 'ApiCommonWebsite/profileSimilarity-config.xml.j2'
   dest: '{{ gus_home }}/config//profileSimilarity-config.xml'
