--- a/Site/package.json
+++ b/Site/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "@types/cytoscape": "3.2.9",
     "ciena-dagre": "^1.0.0",
-    "cytoscape": "^3.2.9",
+    "cytoscape": "3.2.9",
     "cytoscape-dagre": "^1.3.0",
     "cytoscape-panzoom": "^2.5.2",
     "js-cookie": "^2.2.0"
