--- a/Model/pom.xml
+++ b/Model/pom.xml
@@ -71,6 +71,11 @@
 
     <dependency>
       <groupId>org.eupathdb</groupId>
+      <artifactId>ebrc-model-common-model</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.eupathdb</groupId>
       <artifactId>ebrc-website-common-model</artifactId>
     </dependency>
 
