VB facebook link

--- a/Model/lib/conifer/roles/conifer/vars/ApiCommon/VectorBase.yml
+++ b/Model/lib/conifer/roles/conifer/vars/ApiCommon/VectorBase.yml
@@ -2,7 +2,7 @@
 ---
 modelprop:
   TWITTER_URL_2: https://twitter.com/VectorBase
-  FACEBOOK_URL: https://facebook.com/pages/VectorBase
+  FACEBOOK_URL: https://facebook.com/pages/VectorBase/189608142260
 
 
 
