--- a/Site/package.json
+++ b/Site/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "@types/cytoscape": "3.2.9",
-    "@veupathdb/multi-blast": "^0.2.0-alpha.3",
+    "@veupathdb/multi-blast": "^0.1.4",
     "@veupathdb/preferred-organisms": "^0.1.1-beta.9",
     "@veupathdb/wdk-client": "^0.3.0",
     "@veupathdb/web-common": "^0.1.1-alpha.11",
