unidb beta in master static content
(cherry picked from commit 93db703d339a53200ee3a395edff35c95647aff4)

--- a/Model/lib/conifer/roles/conifer/vars/ApiCommon/production/default.yml
+++ b/Model/lib/conifer/roles/conifer/vars/ApiCommon/production/default.yml
@@ -37,7 +37,7 @@ sitesearchsolr_env_map:
 # # generalized way to do this in the future... 
 community_env_map:
    w_prefix: static-content.veupathdb.org/
-   b_prefix: static-content.veupathdb.org/
+   b_prefix: qa.static-content.veupathdb.org/
    default: qa.static-content.veupathdb.org/
 
 # this mapping allow different configs based on hostname.  Mainly used to give
