--- a/Service/pom.xml
+++ b/Service/pom.xml
@@ -126,5 +126,14 @@
       <artifactId>json</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>io.prometheus</groupId>
+      <artifactId>simpleclient</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.prometheus</groupId>
+      <artifactId>simpleclient_common</artifactId>
+    </dependency>
+
   </dependencies>
 </project>
