Fix web-app config for jersey upgrade

--- a/Site/webapp/WEB-INF/web.xml
+++ b/Site/webapp/WEB-INF/web.xml
@@ -150,7 +150,7 @@
     <servlet-name>WSF</servlet-name>
     <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
     <init-param>
-      <param-name>javax.ws.rs.Application</param-name>
+      <param-name>jakarta.ws.rs.Application</param-name>
       <param-value>org.gusdb.wsf.service.WsfServiceApplication</param-value>
     </init-param>
   </servlet>
@@ -165,7 +165,7 @@
     <servlet-name>WDK</servlet-name>
     <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
     <init-param>
-      <param-name>javax.ws.rs.Application</param-name>
+      <param-name>jakarta.ws.rs.Application</param-name>
       <param-value>org.apidb.apicommon.service.ApiWebServiceApplication</param-value>
     </init-param>
   </servlet>
