--- a/Site/package.json
+++ b/Site/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "start": "veupathdb-react-scripts run-site-dev-server --config webpack.config.local.mjs"
+  },
   "browserslist": [
     "extends @veupathdb/browserslist-config"
   ],
@@ -43,10 +46,15 @@
     "@types/react-dom": "^17.0.14",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-select": "3",
+    "@veupathdb/react-scripts": "^2.0.0",
     "bubleify": "^2.0.0",
+    "html-webpack-plugin": "^4.5.2",
     "ify-loader": "^1.1.0",
     "jquery": "1.9.1",
     "popper.js": "^1.16.1",
-    "react-spring": "^8.0.27"
+    "react-spring": "^8.0.27",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.7.4"
   }
 }
