--- a/Site/package.json
+++ b/Site/package.json
@@ -38,7 +38,10 @@
     "redux": "^4.0.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.4.4",
     "@babel/core": "^7.0.0",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.0.0",
     "@emotion/serialize": "^1.0.2",
     "@emotion/styled": "^11.7.0",
     "@types/jqueryui": "^1.12.16",
@@ -46,15 +49,32 @@
     "@types/react-dom": "^17.0.14",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-select": "3",
+    "@veupathdb/base-webpack-config": "^0.1.0",
+    "@veupathdb/browserslist-config": "^1.1.0",
     "@veupathdb/react-scripts": "^2.0.0",
+    "@veupathdb/site-babel-config": "^0.1.0",
+    "@veupathdb/site-tsconfig": "^0.1.0",
+    "@veupathdb/site-webpack-config": "^0.1.0",
+    "babel-loader": "^8.0.5",
     "bubleify": "^2.0.0",
+    "css-loader": "^2.1.1",
+    "file-loader": "^3.0.1",
     "html-webpack-plugin": "^4.5.2",
     "ify-loader": "^1.1.0",
     "jquery": "1.9.1",
+    "mini-css-extract-plugin": "^0.6.0",
+    "node-sass": "^4.12.0",
     "popper.js": "^1.16.1",
     "react-spring": "^8.0.27",
+    "sass-loader": "^7.1.0",
+    "script-loader": "^0.7.2",
+    "source-map-loader": "^1.1.2",
+    "ts-loader": "^5.4.5",
+    "typescript": "3.7",
+    "url-loader": "^1.1.2",
     "webpack": "^4.46.0",
     "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.7.4"
+    "webpack-dev-server": "^4.7.4",
+    "webpack-merge": "^4.2.1"
   }
 }
