Default to port 3000

--- a/Site/package.json
+++ b/Site/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "veupathdb-react-scripts run-site-dev-server --config webpack.config.local.mjs"
+    "start": "veupathdb-react-scripts run-site-dev-server --config webpack.config.local.mjs --port 3000"
   },
   "browserslist": [
     "extends @veupathdb/browserslist-config"
