--- a/pom.xml
+++ b/pom.xml
@@ -19,11 +19,6 @@
     <dependencies>
       <dependency>
         <groupId>org.gusdb</groupId>
-        <artifactId>wdk-website-controller</artifactId>
-        <version>${project.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.gusdb</groupId>
         <artifactId>wdk-model</artifactId>
         <version>${project.version}</version>
       </dependency>
@@ -62,21 +57,8 @@
 
   <parent>
     <groupId>org.gusdb</groupId>
-    <artifactId>base-pom</artifactId>
+    <artifactId>gus-project-pom</artifactId>
     <version>1.0.0</version>
-    <relativePath>../FgpUtil/Dependencies/org/gusdb/base-pom/1.0.0/base-pom-1.0.0.pom</relativePath>
   </parent>
-
-  <repositories>
-    <repository>
-      <id>eupathdb</id>
-      <name>EuPathDB Project Dependencies</name>
-      <layout>default</layout>
-      <url>https://raw.githubusercontent.com/EuPathDB/FgpUtil/master/Dependencies/</url>
-      <snapshots>
-        <enabled>false</enabled>
-      </snapshots>
-    </repository>
-  </repositories>
 
 </project>
