Set feature flag to "true" for "component" genomics sites

--- a/Model/lib/conifer/roles/conifer/vars/ApiCommon/EuPathDB.yml
+++ b/Model/lib/conifer/roles/conifer/vars/ApiCommon/EuPathDB.yml
@@ -1,6 +1,9 @@
 # $SourceFileURL$
 ---
 
+user_datasets_workspace:
+  enabled: "false"
+
 # Given hostname == a1.eupathdb.org, swap_sld('amoebadb.org')
 # returns 'a1.amoebadb.org'. swap_hostname(_host_frontends) returns
 # 'alpha.amoebadb.org'.
