Add configuration for clinepi

--- a/Model/lib/conifer/roles/conifer/vars/ApiCommon/default.yml
+++ b/Model/lib/conifer/roles/conifer/vars/ApiCommon/default.yml
@@ -17,6 +17,8 @@ modelconfig_userDatasetStoreConfig: >
       implementation="org.gusdb.wdk.model.user.dataset.ExampleTypeHandler"/>
     <typeHandler type="GeneList" version="1.0"
       implementation="org.apidb.apicommon.model.userdataset.GeneListTypeHandler"/>
+    <typeHandler type="ISASimple" version="1.0"
+      implementation="org.apidb.apicommon.model.userdataset.ISASimpleTypeHandler"/>
   </userDatasetStore>
 
 modelprop:
