--- a/Model/lib/conifer/roles/conifer/vars/ApiCommon/production/default.yml
+++ b/Model/lib/conifer/roles/conifer/vars/ApiCommon/production/default.yml
@@ -111,6 +111,6 @@ modelconfig_userDatasetStoreConfig: >
    <typeHandler type="BigwigFiles" version="1.0"  implementation="org.apidb.apicommon.model.userdataset.BigwigFilesTypeHandler"/>
    <typeHandler type="RnaSeq" version="1.0"  implementation="org.apidb.apicommon.model.userdataset.RnaSeqTypeHandler"/>
    <typeHandler type="BIOM" version="1.0, 2.0, or 2.1" implementation="org.apidb.apicommon.model.userdataset.BiomTypeHandler"/>
-   <typeHandler type="ISASimple" version="1.0" implementation="org.apidb.apicommon.model.userdataset.ISASimpleHandler"/>
+   <typeHandler type="ISASimple" version="1.0" implementation="org.apidb.apicommon.model.userdataset.ISASimpleTypeHandler"/>
  </userDatasetStore>
 
