--- a/Site/package.json
+++ b/Site/package.json
@@ -22,8 +22,8 @@
     "@veupathdb/multi-blast": "^3.0.0",
     "@veupathdb/preferred-organisms": "^1.1.11",
     "@veupathdb/study-data-access": "^0.3.1",
-    "@veupathdb/user-datasets": "^0.1.1",
     "@veupathdb/wdk-client": "^0.7.2",
+    "@veupathdb/user-datasets": "^0.1.2",
     "@veupathdb/web-common": "^0.5.2",
     "ciena-dagre": "^1.0.0",
     "core-js": "^3.21.1",
@@ -31,6 +31,7 @@
     "cytoscape-dagre": "^1.3.0",
     "cytoscape-panzoom": "^2.5.2",
     "js-cookie": "^2.2.0",
+    "notistack": "^1.0.10",
     "react": "16",
     "react-dom": "16",
     "react-redux": "^7.2.7",
