For component sites, add portal URL to the "projectUrls" field of the WDK service config json

--- a/Model/lib/conifer/roles/conifer/vars/ApiCommon/EuPathDB.yml
+++ b/Model/lib/conifer/roles/conifer/vars/ApiCommon/EuPathDB.yml
@@ -10,6 +10,7 @@ user_datasets_workspace:
 projectsxml:
   AmoebaDB: "https://{{ hostname|swap_sld('amoebadb.org')|swap_hostname(_host_frontends) }}/amoeba/"
   CryptoDB: "https://{{ hostname|swap_sld('cryptodb.org')|swap_hostname(_host_frontends) }}/cryptodb/"
+  EuPathDB: null
   FungiDB: "https://{{ hostname|swap_sld('fungidb.org')|swap_hostname(_host_frontends) }}/fungidb/"
   GiardiaDB: "https://{{ hostname|swap_sld('giardiadb.org')|swap_hostname(_host_frontends) }}/giardiadb/"
   HostDB: "https://{{ hostname|swap_sld('hostdb.org')|swap_hostname(_host_frontends) }}/hostdb/"
