--- a/Site/package.json
+++ b/Site/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "veupathdb-react-scripts run-site-dev-server --config webpack.config.local.mjs --port 3000"
+    "start": "veupathdb-react-scripts run-site-dev-server --config webpack.config.local.mjs --port 3000",
+    "prepare": "cd .. && husky install Site/.husky"
   },
   "browserslist": [
     "extends @veupathdb/browserslist-config"
@@ -65,6 +66,7 @@
     "css-loader": "^2.1.1",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^4.5.2",
+    "husky": "^8.0.0",
     "ify-loader": "^1.1.0",
     "jquery": "1.9.1",
     "mini-css-extract-plugin": "^0.6.0",
