set eda true/false for different prod sites

--- a/Model/lib/conifer/roles/conifer/vars/ApiCommon/production/VectorBase.yml
+++ b/Model/lib/conifer/roles/conifer/vars/ApiCommon/production/VectorBase.yml
@@ -1,8 +1,9 @@
 # $SourceFileURL$
 # ---
-# modelconfig_appDb_maxIdle: 1
-# modelconfig_appDb_maxActive: 20
-# modelconfig_userDb_maxIdle: 20
 eda:
   enabled: "false"
-
+    w_prefix: "false" 
+    q_prefix: "false"
+    b_prefix: "true"
+    f_prefix: "true"
+    default: "false"
