set eda true/false for different prod sites

--- a/Model/lib/conifer/roles/conifer/vars/ApiCommon/production/VectorBase.yml
+++ b/Model/lib/conifer/roles/conifer/vars/ApiCommon/production/VectorBase.yml
@@ -1,9 +1,10 @@
 # $SourceFileURL$
 # ---
 eda:
-  enabled:
+  enabled_map:
     w_prefix: "false" 
     q_prefix: "false"
     b_prefix: "true"
     f_prefix: "true"
     default: "false"
+  enabled: "{{ enabled_map[prefix]|default(enabled_map['default']) }}"
