--- a/Model/lib/conifer/roles/conifer/vars/ApiCommon/production/VectorBase.yml
+++ b/Model/lib/conifer/roles/conifer/vars/ApiCommon/production/VectorBase.yml
@@ -3,9 +3,4 @@
 # construct a prefix from hostname, like w_prefix, q_prefix
 prefix: "{{ hostname | regex_replace('^([a-z])[0-9].*','\\1_prefix') }}"-
 eda:
-  enabled_map:
-    w_prefix: "false" 
-    q_prefix: "false"
-    b_prefix: "true"
-    default: "true"
-  enabled: "{{ enabled_map[prefix]|default(enabled_map['default']) }}"
+  enabled: "true"
