--- a/Model/lib/conifer/roles/conifer/vars/ApiCommon/production/VectorBase.yml
+++ b/Model/lib/conifer/roles/conifer/vars/ApiCommon/production/VectorBase.yml
@@ -3,4 +3,4 @@
 # construct a prefix from hostname, like w_prefix, q_prefix
 prefix: "{{ hostname | regex_replace('^([a-z])[0-9].*','\\1_prefix') }}"-
 eda:
-  enabled: "true"
+  enabled: "false"
