--- a/Model/lib/conifer/roles/conifer/vars/ApiCommon/production/VectorBase.yml
+++ b/Model/lib/conifer/roles/conifer/vars/ApiCommon/production/VectorBase.yml
@@ -1,10 +1,8 @@
 # $SourceFileURL$
 ---
 eda_enabled_env_map:
-  w_prefix: "false"
-  q_prefix: "false"
-  b_prefix: "true"
-  default: "true"
+  f_prefix: "true" # feature site
+  default: "false"
 eda:
   enabled: "{{ eda_enabled_env_map[prefix]|default(eda_enabled_env_map['default']) }}"
 
