enable eda for dev and beta sites

--- a/Model/lib/conifer/roles/conifer/vars/ApiCommon/production/VectorBase.yml
+++ b/Model/lib/conifer/roles/conifer/vars/ApiCommon/production/VectorBase.yml
@@ -1,6 +1,7 @@
 # $SourceFileURL$
 ---
 eda_enabled_env_map:
+  b_prefix: "true" # beta site
   f_prefix: "true" # feature site
   default: "false"
 eda:
