have qa site using prod irods for testing 2 days nbefore release, this wont affect next cycle of qa sites on master

--- a/Model/lib/conifer/roles/conifer/vars/ApiCommon/production/default.yml
+++ b/Model/lib/conifer/roles/conifer/vars/ApiCommon/production/default.yml
@@ -71,6 +71,17 @@ workspace_env_map:
     rootPath: /ebrc/workspaces/users
     zone: ebrc
     port: 1247
+  q_prefix:
+    host: irods.eupathdb.org
+    login: wrkspuser
+    password: "{{ lookup('euparc',
+      'attr=password xpath=workspaces/irods[@user=\"{}\"]'.format('wrkspuser')
+      )
+    }}"
+    resource: ebrcResc
+    rootPath: /ebrc/workspaces/users
+    zone: ebrc
+    port: 1247
   default:
     host: irods.qa.eupathdb.org
     login: qawrkspuser
