--- a/Model/lib/conifer/roles/conifer/vars/ApiCommon/production/VectorBase.yml
+++ b/Model/lib/conifer/roles/conifer/vars/ApiCommon/production/VectorBase.yml
@@ -1,13 +1,6 @@
 # $SourceFileURL$
 ---
-
-# construct a prefix from hostname, like w_prefix, q_prefix
-prefix: "{{ hostname | regex_replace('^([a-z])[0-9].*','\\1_prefix') }}"
-
-eda_enabled_env_map:
-  b_prefix: "true" # beta site
-  f_prefix: "true" # feature site
-  default: "false"
 eda:
-  enabled: "{{ eda_enabled_env_map[prefix]|default(eda_enabled_env_map['default']) }}"
+  # enable for feature and beta sites
+  enabled: "{{ 'true' if hostname.startswith(('feature.', 'b1.', 'b2.')) else 'false' }}"
 
