dep upgrades and compatibility

--- a/Model/lib/conifer/roles/conifer/vars/ApiCommon/default.yml
+++ b/Model/lib/conifer/roles/conifer/vars/ApiCommon/default.yml
@@ -39,6 +39,7 @@ modelprop:
   REDDIT_URL: https://www.reddit.com/r/BRC_users/
   SITE_SEARCH_SERVICE_URL: /site-search
   MULTI_BLAST_SERVICE_URL: /multi-blast
+  SEQUENCE_RETRIEVAL_SERVICE_URL: /sequence-retrieval
   JBROWSE_WEBPAGE_URL: "/{{ webapp_ctx }}/app/jbrowse"
   JBROWSE_SERVICE_URL: "/{{ webapp_ctx }}/service/jbrowse"
 
