--- a/Site/package.json
+++ b/Site/package.json
@@ -20,7 +20,7 @@
     "@veupathdb/coreui": "^0.18.21",
     "@veupathdb/eda": "^4.1.7",
     "@veupathdb/http-utils": "^1.1.1",
-    "@veupathdb/multi-blast": "^3.0.2",
+    "@veupathdb/multi-blast": "^3.0.2-patch.1",
     "@veupathdb/preferred-organisms": "^1.1.16",
     "@veupathdb/study-data-access": "^0.4.1",
     "@veupathdb/user-datasets": "^0.1.14",
