--- a/Model/lib/conifer/roles/conifer/vars/ApiCommon/production/VectorBase.yml
+++ b/Model/lib/conifer/roles/conifer/vars/ApiCommon/production/VectorBase.yml
@@ -2,5 +2,5 @@
 ---
 eda:
   # enable for feature and beta sites
-  enabled: "{{ 'true' if hostname.startswith(('feature.', 'b1.', 'b2.')) else 'false' }}"
+  enabled: "{{ 'true' if hostname.startswith(('feature.', 'b1.', 'b2.', 'q1.', 'q2.')) else 'false' }}"
 
