--- a/Site/package.json
+++ b/Site/package.json
@@ -2,6 +2,6 @@
   "name": "genomics-site-deployer",
   "private": true,
   "dependencies": {
-    "@veupathdb/genomics-site": "latest"
+    "@veupathdb/genomics-site": "^1.0.40"
   }
 }
