--- a/Model/lib/conifer/roles/conifer/vars/ApiCommon/production/default.yml
+++ b/Model/lib/conifer/roles/conifer/vars/ApiCommon/production/default.yml
@@ -13,7 +13,27 @@ modelconfig_commentdb.maxIdle: 10
 commentconfig_solrUrl: "https://solr-sitesearch-{{ sitesearchsolr_env_map[prefix]|default(sitesearchsolr_env_map['default']) }}.local.apidb.org:8443/solr/site_search/"
 
 
+vdi_control_env_map:
+  w1_prefix: VDI_CONTROL_PROD_S
+  b1_prefix: VDI_CONTROL_BETA_S
+  q1_prefix: VDI_CONTROL_QA_S
+  w2_prefix: VDI_CONTROL_PROD_N
+  b2_prefix: VDI_CONTROL_BETA_N
+  q2_prefix: VDI_CONTROL_QA_N
+  default: VDI_CONTROL_QA_N
+
+vdi_datasets_env_map:
+  w1_prefix: VDI_DATASETS_PROD_S
+  b1_prefix: VDI_DATASETS_BETA_S
+  q1_prefix: VDI_DATASETS_QA_S
+  w2_prefix: VDI_DATASETS_PROD_N
+  b2_prefix: VDI_DATASETS_BETA_N
+  q2_prefix: VDI_DATASETS_QA_N
+  default: VDI_DATASETS_QA_N
+
 modelprop:
+  VDI_CONTROL_SCHEMA: "{{ vdi_control_env_map[prefix_vdi]|default(vdi_control_env_map['default']) }}"
+  VDI_DATASETS_SCHEMA: "{{ vdi_datasets_env_map[prefix_vdi]|default(vdi_datasets_env_map['default']) }}"
   GOOGLE_ANALYTICS_ID:  "{{ lookup('euparc',
   'attr=google_analytics_id xpath=sites/site[@hostname=\"{}\"] default='.format( hostname|swap_hostname(_host_frontends) )
   )
