--- a/Model/lib/conifer/roles/conifer/vars/ApiCommon/production/default.yml
+++ b/Model/lib/conifer/roles/conifer/vars/ApiCommon/production/default.yml
@@ -12,7 +12,7 @@ modelconfig_userDb_maxIdle: 10
 modelconfig_commentdb.maxIdle: 10
 commentconfig_solrUrl: "https://solr-sitesearch-{{ sitesearchsolr_env_map[prefix]|default(sitesearchsolr_env_map['default']) }}.local.apidb.org:8443/solr/site_search/"
 
-prefix_vdi: "{{ hostname | regex_replace('^([a-z][0-9]).*','1_prefix') }}"
+prefix_vdi: "{{ hostname | regex_replace('^([a-z][0-9]).*','\\1_prefix') }}"
 
 vdi_control_env_map:
   w1_prefix: VDI_CONTROL_PROD_S
@@ -35,6 +35,7 @@ vdi_datasets_env_map:
 modelprop:
   HOSTNAME: "{{ hostname }}"
   PREFIX_VDI: "{{ prefix_vdi }}"
+  PREFIX: "{{ prefix }"}
   VDI_CONTROL_SCHEMA: "{{ vdi_control_env_map[prefix_vdi]|default(vdi_control_env_map['default']) }}"
   VDI_DATASETS_SCHEMA: "{{ vdi_datasets_env_map[prefix_vdi]|default(vdi_datasets_env_map['default']) }}"
   GOOGLE_ANALYTICS_ID:  "{{ lookup('euparc',
