attempt to finish the wdk references in qa.plasmo on api-build-68

--- a/Model/lib/conifer/roles/conifer/vars/ApiCommon/production/default.yml
+++ b/Model/lib/conifer/roles/conifer/vars/ApiCommon/production/default.yml
@@ -93,8 +93,8 @@ workspace_env_map:
     zone: ebrc
     port: 1247
   default:
-    host: irods.qa.eupathdb.org
-    login: qawrkspuser
+    host: irods.eupathdb.org
+    login: wrkspuser
     password: "{{ lookup('euparc',
       'attr=password xpath=workspaces/irods[@user=\"{}\"]'.format('qawrkspuser')
       )
