--- a/Model/lib/conifer/roles/conifer/vars/ApiCommon/production/default.yml
+++ b/Model/lib/conifer/roles/conifer/vars/ApiCommon/production/default.yml
@@ -93,7 +93,7 @@ workspace_env_map:
     zone: ebrc
     port: 1247
   default:
-    host: irods.eupathdb.org
+    host: irods.qa.eupathdb.org
     login: wrkspuser
     password: "{{ lookup('euparc',
       'attr=password xpath=workspaces/irods[@user=\"{}\"]'.format('qawrkspuser')
