Add dispatchers for UrlRewriteFilter
(cherry picked from commit 9b69ce716902967e2274fb8ffd9651afeeff1d06)

--- a/Site/webapp/WEB-INF/web.xml
+++ b/Site/webapp/WEB-INF/web.xml
@@ -97,6 +97,8 @@
   <filter-mapping>
     <filter-name>UrlRewriteFilter</filter-name>
     <url-pattern>/*</url-pattern>
+    <dispatcher>REQUEST</dispatcher>
+    <dispatcher>FORWARD</dispatcher>
   </filter-mapping>
   <!-- End UrlRewrite filter -->
 
@@ -196,4 +198,3 @@
   </error-page>
 
 </web-app>
-
