require login for all staging

--- a/Model/lib/conifer/roles/conifer/vars/ApiCommon/default.yml
+++ b/Model/lib/conifer/roles/conifer/vars/ApiCommon/default.yml
@@ -1,5 +1,7 @@
 # $SourceFileURL$
 ---
+requireLogin: "true"
+
 modelconfig_modelName: apiCommonModel
 modelconfig_authenticationMethod: oauth2
 modelconfig_oauthClientId: apiComponentSite
