--- a/Site/webapp/WEB-INF/web.xml
+++ b/Site/webapp/WEB-INF/web.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app version="2.4"
-    xmlns="http://java.sun.com/xml/ns/j2ee"
-    xmlns:web="http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd"
+<web-app version="4.0"
+    xmlns="http://xmlns.jcp.org/xml/ns/javaee"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
+    xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd">
 
   <context-param>
     <param-name>GUS_HOME</param-name>
@@ -15,10 +14,6 @@
     <param-name>wdkServiceEndpoint</param-name>
     <param-value>/service</param-value>
   </context-param>
-
-  <listener>
-    <listener-class>se.jiderhamn.classloader.leak.prevention.ClassLoaderLeakPreventorListener</listener-class>
-  </listener>
 
   <listener>
     <listener-class>org.apidb.apicommon.controller.ApplicationInitListener</listener-class>
