--- a/Model/lib/conifer/roles/conifer/vars/ApiCommon/default.yml
+++ b/Model/lib/conifer/roles/conifer/vars/ApiCommon/default.yml
@@ -60,7 +60,13 @@ projectsxml:
 commentconfig_login: '{{ modelconfig_userDb_login }}'
 commentconfig_password: '{{ modelconfig_userDb_password }}'
 commentconfig_connectionUrl: '{{ modelconfig_userDb_connectionUrl }}'
-commentconfig_platform: Oracle
+commentconfig_platform: '{{ modelconfig_userDb_platform }}'
+commentconfig_ldapServer: '{{ modelconfig_userDb_ldapServer }}'
+commentconfig_ldapBaseDn: '{{ modelconfig_userDb_ldapBaseDn }}'
+commentconfig_ldapCommonName: '{{ modelconfig_userDb_ldapCommonName }}'
+commentconfig_dbIdentifier: '{{ modelconfig_userDb_dbIdentifier }}'
+commentconfig_dbHost: '{{ modelconfig_userDb_dbHost }}'
+commentconfig_dbPort: '{{ modelconfig_userDb_dbPort }}'
 commentconfig_maxActive: 20
 commentconfig_maxIdle: 1
 commentconfig_minIdle: 1
@@ -89,17 +95,20 @@ highspeedchipsnpsearchconfig_idPrefix: 'NULL'
 profilesimilarityconfig_dbLogin: '{{ modelconfig_appDb_login }}'
 profilesimilarityconfig_dbPassword: '{{ modelconfig_appDb_password }}'
 profilesimilarityconfig_perlExec: /usr/bin/perl
-profilesimilarityconfig_connectionUrl: "{{ '' if modelconfig_userDb_connectionUrl.startswith('=c=') else modelconfig_appDb_connectionUrl|jdbc2Dbi }}"
+# Note: assuming postgres here when connection URL is missing (cannot determine platform from ldap cn)
+profilesimilarityconfig_connectionUrl: "{{ if modelconfig_userDb_connectionUrl.startswith('=c=') 'dbi:Pg:' ~ modelconfig_appDb_ldapCommonName else modelconfig_appDb_connectionUrl|jdbc2Dbi }}"
 
 genelistcomparisonconfig_dbLogin: '{{ modelconfig_appDb_login }}'
 genelistcomparisonconfig_dbPassword: '{{ modelconfig_appDb_password }}'
 genelistcomparisonconfig_perlExec: /usr/bin/perl
-genelistcomparisonconfig_connectionUrl: "{{ '' if modelconfig_userDb_connectionUrl.startswith('=c=') else modelconfig_appDb_connectionUrl|jdbc2Dbi }}"
+# Note: assuming postgres here when connection URL is missing (cannot determine platform from ldap cn)
+genelistcomparisonconfig_connectionUrl: "{{ if modelconfig_userDb_connectionUrl.startswith('=c=') 'dbi:Pg:' ~ modelconfig_appDb_ldapCommonName else modelconfig_appDb_connectionUrl|jdbc2Dbi }}"
 
 fisherexacttestconfig_dbLogin: '{{ modelconfig_appDb_login }}'
 fisherexacttestconfig_dbPassword: '{{ modelconfig_appDb_password }}'
 fisherexacttestconfig_perlExec: /usr/bin/perl
-fisherexacttestconfig_connectionUrl: "{{ '' if modelconfig_userDb_connectionUrl.startswith('=c=') else modelconfig_appDb_connectionUrl|jdbc2Dbi }}"
+# Note: assuming postgres here when connection URL is missing (cannot determine platform from ldap cn)
+fisherexacttestconfig_connectionUrl: "{{ if modelconfig_userDb_connectionUrl.startswith('=c=') 'dbi:Pg:' ~ modelconfig_appDb_ldapCommonName else modelconfig_appDb_connectionUrl|jdbc2Dbi }}"
 
 _showUnreleasedDataByHostnamePrefix:
   a: false
