--- a/Model/lib/conifer/roles/conifer/vars/ApiCommon/default.yml
+++ b/Model/lib/conifer/roles/conifer/vars/ApiCommon/default.yml
@@ -60,13 +60,13 @@ projectsxml:
 commentconfig_login: '{{ modelconfig_userDb_login }}'
 commentconfig_password: '{{ modelconfig_userDb_password }}'
 commentconfig_connectionUrl: '{{ modelconfig_userDb_connectionUrl }}'
-commentconfig_platform: "{{ modelconfig_userDb_platform if modelconfig_userDb_platform is defined else '' }}"
+commentconfig_platform: "{{ modelconfig_userDb_platform if modelconfig_userDb_platform is defined else undefined }}"
 commentconfig_ldapServer: '{{ modelconfig_userDb_ldapServer }}'
 commentconfig_ldapBaseDn: '{{ modelconfig_userDb_ldapBaseDn }}'
 commentconfig_ldapCommonName: '{{ modelconfig_userDb_ldapCommonName }}'
-commentconfig_dbIdentifier: '{{ modelconfig_userDb_dbIdentifier }}'
-commentconfig_dbHost: '{{ modelconfig_userDb_dbHost }}'
-commentconfig_dbPort: '{{ modelconfig_userDb_dbPort }}'
+commentconfig_dbIdentifier: '{{ modelconfig_userDb_dbIdentifier if modelconfig_userDb_dbIdentifier is defined else undefined }}'
+commentconfig_dbHost: '{{ modelconfig_userDb_dbHost if modelconfig_userDb_dbHost is defined else undefined }}'
+commentconfig_dbPort: '{{ modelconfig_userDb_dbPort if modelconfig_userDb_dbPort is defined else undefined }}'
 commentconfig_maxActive: 20
 commentconfig_maxIdle: 1
 commentconfig_minIdle: 1
