--- a/Model/lib/conifer/roles/conifer/vars/ApiCommon/default.yml
+++ b/Model/lib/conifer/roles/conifer/vars/ApiCommon/default.yml
@@ -45,6 +45,11 @@ modelprop:
   SEQUENCE_RETRIEVAL_SERVICE_URL: /sequence-retrieval
   JBROWSE_WEBPAGE_URL: "/{{ webapp_ctx }}/app/jbrowse"
   JBROWSE_SERVICE_URL: "/{{ webapp_ctx }}/service/jbrowse"
+  AI_EXPRESSION_CACHE_DIR: "/eupath/ai-expr-cache"
+  OPENAI_API_KEY: "{{ lookup('euparc', 'attr=api_key xpath=sites/openai default=NOKEY') }}"
+  MAX_DAILY_AI_EXPRESSION_DOLLAR_COST: 33
+  DOLLAR_COST_PER_1M_AI_INPUT_TOKENS: 2.5
+  DOLLAR_COST_PER_1M_AI_OUTPUT_TOKENS: 10
 
 user_datasets_uploadTypes_env_map:
   w: "genelist"
